--- a/jobs-ng/src/app/jobs/jobs.component.html
+++ b/jobs-ng/src/app/jobs/jobs.component.html
@@ -1,3 +1,15 @@
-<p>
-  jobs works!
-</p>
+<div class="text-center mt-3">
+  <h2>Jobs</h2>
+</div>
+<div class="container mt-3">
+  <div class="row">
+    <div *ngFor="let job of jobs" class="col-lg-3 col-md-6 col-sm-12">
+      <a [routerLink]="['/job', job.id]"  >
+        {{job.jobTitle}}
+      </a>
+      <div>
+        {{job.jobCode}}
+      </div>
+    </div>
+  </div>
+</div>
